# hub

./: PRD.md  README.md  TECH_STACK.md  pyproject.toml  requirements.txt
src/hub/: main.py
src/hub/panels/: ai_panel.py  git_panel.py  shell_panel.py  terminal_panel.py
